fix social media icon spacing scaling

--- a/_sass/templates/_hero-area.scss
+++ b/_sass/templates/_hero-area.scss
@@ -67,11 +67,13 @@
 .social-media-list {
   position: absolute;
   top: 20em;
+  left: 2em;
 
   @media (max-width: 1100px) {
     position: absolute;
     font-size: 3vw;
     top: 7em;
+    left: 0.5em;
   }
 
   @include mobile {
